--- a/css/style.css
+++ b/css/style.css
@@ -183,7 +183,8 @@ nav ul li a:hover{
   position: relative;
   background: url("../images/background.jpg") no-repeat center center / cover;
   padding: 80px 0;
-  z-index: 1;
+  z-index: 0;
+  min-height: 100vh;
 }
 
 .profile::before {
